# open-discourse

./: .gitignore  CLAUDE.md  README.md
python/: .gitignore  Makefile  README.md  dodo.py  pyproject.toml  results.txt
python/nb/: comparison.ipynb  data_exploration.ipynb  match_politicians_opendiscourse_abgeordnetenwatch.ipynb  match_politicians_opendiscourse_abgeordnetenwatch.py
python/open_discourse/01_preprocessing/: 01_download_raw_data.py  02_download_raw_data_electoral_term_19_20.py  07_create_electoral_terms.py
python/open_discourse/02_factions/: 01_create_factions.py  02_add_abbreviations_and_ids.py
python/open_discourse/03_politicians/: 01_add_faction_id_to_mps.py  02_scrape_mgs.py  03_merge_politicians.py
python/open_discourse/04_speech_content/: 01_extract_speeches.py  03_match_names_speeches.py
python/open_discourse/05_electoral_term_19_20/: 01_extract_speeches_and_contributions_electoral_term_19_20.py
python/semantic_search/: llm_shenanigans.py
python/tests/: pytest.ini  test_clean_text.py  test_create_electoral_terms.py  test_doit_config.py  test_factions.py  test_func_step02_func01.py  test_func_step02_func04_extract_mps.py  test_functions_02_05.py  test_functions_special_char.py  test_functions_step02_01_split_xml.py  test_functions_step02_func_05_create_el_terms.py  test_is_valid_date.py  test_logging_config.py  test_parser.py  test_parser_metadata.py  test_preprocessing_split_xml.py  test_process_single_mdb.py  test_session_file_iterator.py  test_speech_content_extract.py  test_steps.py  test_task_factory.py  test_utils.py
(+146 files in other folders)
