[project]
name = "open_discourse"
version = "1.2.2"
description = "Open Discourse"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "dicttoxml>=1.7.16",
    "levenshtein>=0.25.1",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "psycopg2>=2.9.9",
    "regex>=2024.5.15",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.31",
    "tqdm>=4.62.3",
    "pyparsing>=3.2.0",
    "pydantic>=2.9.2",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["open_discourse*"]

[tool.setuptools.package-data]
open_discourse = ["*"]

[tool.ruff]
exclude = ["__pycache__", ".git", ".github", ".ruff_cache", ".venv"]
line-length = 88

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.4",
]
